fixing bug stretching main image

--- a/app/assets/stylesheets/pages/_app-mobile.scss
+++ b/app/assets/stylesheets/pages/_app-mobile.scss
@@ -80,9 +80,9 @@
     .phone{
       display: flex;
       justify-content: center;
-      align-self: center;
+      align-self: start;
       img{
-        width: 80%;
+        width: 70%;
         margin-right: 7%;
       }
     }
